# libat-c

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
examples/: host_simulation.c  stm32_freertos.c
include/: at.h  at_config.h  at_fmt.h  at_gsm.h  at_platform.h
src/: at.c  at_gsm.c  at_platform_defaults.c
tests/: test_cpp_include.cpp  test_engine.c  test_fmt.c  test_gsm.c
